# serializer version: 1
# name: DashboardViewTest.test_dashboard
  '''
  <form action="/search/employers/results" method="get" role="search">
                          
  
  
  
  
  <div class="row">
      <div class="col-12">
          <label class="visually-hidden" for="id_city">Ville</label>
          <div class="input-group input-group-xl input-group-search flex-nowrap">
              <div class="input-group-text bg-white rounded-start ps-3 pe-2">
                  <i aria-hidden="true" class="ri-map-pin-line ri-lg text-disabled"></i>
              </div>
              <select class="form-control django-select2" data-ajax--url="/autocomplete/cities?select2=&amp;slug=" data-allow-clear="false" data-minimum-input-length="2" data-placeholder="Rechercher un emploi inclusif autour de…" data-theme="bootstrap-5" id="id_city" lang="fr" name="city" required="">
  </select>
              <div class="input-group-text bg-white p-0">
                  <button aria-label="Rechercher un emploi inclusif" class="btn btn-ico btn-link">
                      <i aria-hidden="true" class="ri-search-line font-weight-bold"></i>
                      <span>Rechercher</span>
                  </button>
              </div>
          </div>
      </div>
  </div>
  
                      </form>
  '''
# ---
# name: EditUserInfoViewTest.test_edit_without_title[missing title warning with phone and address]
  '''
  <div class="alert alert-warning" id="missing-infos-warning" role="status">
                                  <div class="row">
                                      <div class="col-auto pe-0">
                                          <i class="ri-information-line ri-xl text-warning"></i>
                                      </div>
                                      <div class="col">
                                          <p class="mb-2">
                                              <strong>Informations manquantes</strong>
                                          </p>
                                          <p>Une ou plusieurs informations de votre profil sont nécessaires pour utiliser votre espace candidat.</p>
                                          <p class="mb-0">
                                              Les champs suivants ne sont pas renseignés :
                                              </p><ul>
                                                  
                                                      
                                                  
                                                      
                                                          <li>
                                                              <strong>Civilité</strong>
                                                          </li>
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                          <li>
                                                              <strong>Téléphone</strong>
                                                          </li>
                                                      
                                                  
                                                      
                                                          <li>
                                                              <strong>Adresse</strong>
                                                          </li>
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                              </ul>
                                          <p></p>
                                      </div>
                                  </div>
                              </div>
  '''
# ---
# name: EditUserInfoViewTest.test_edit_without_title[missing title warning without phone and with birthdate]
  '''
  <div class="alert alert-warning" id="missing-infos-warning" role="status">
                                  <div class="row">
                                      <div class="col-auto pe-0">
                                          <i class="ri-information-line ri-xl text-warning"></i>
                                      </div>
                                      <div class="col">
                                          <p class="mb-2">
                                              <strong>Informations manquantes</strong>
                                          </p>
                                          <p>Une ou plusieurs informations de votre profil sont nécessaires pour utiliser votre espace candidat.</p>
                                          <p class="mb-0">
                                              Les champs suivants ne sont pas renseignés :
                                              </p><ul>
                                                  
                                                      
                                                  
                                                      
                                                          <li>
                                                              <strong>Civilité</strong>
                                                          </li>
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                          <li>
                                                              <strong>Date de naissance</strong>
                                                          </li>
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                              </ul>
                                          <p></p>
                                      </div>
                                  </div>
                              </div>
  '''
# ---
